--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "description": "Example Node.js API application.",
   "author": "Tuan Nguyen <tuannd995@gmail.com>",
   "dependencies": {
+    "async": "^2.6.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "hippie": "0.3.x",
+    "http-errors": "^1.6.3",
     "jjg-ping": "1.x.x",
     "mocha": "2.2.x",
     "mongoose": "^5.0.15",
-    "restify": "3.x.x"
+    "morgan": "^1.9.0",
+    "nodemailer": "^4.6.4",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "rand-token": "^0.4.0",
+    "restify": "3.x.x",
+    "socket.io": "^2.1.0",
+    "validator": "^10.2.0"
   },
   "scripts": {
     "start": "npm start",
