--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.0.15",
     "morgan": "^1.9.0",
     "nodemailer": "^4.6.4",
+    "nodemon": "^1.17.4",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
@@ -28,7 +29,7 @@
     "validator": "^10.2.0"
   },
   "scripts": {
-    "start": "npm install && nodemon app.js",
+    "start": "nodemon app.js",
     "test": "mocha test"
   },
   "repository": {
