--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jjg-ping": "1.x.x",
     "mocha": "2.2.x",
     "mongoose": "^5.0.15",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
     "nodemailer": "^4.6.4",
     "nodemon": "^1.17.4",
